# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  conftest.py  pyproject.toml  requirements.txt  ruff.toml  run_tests.sh  sonar-project.properties
.github/workflows/: pyci.yml  sonarqube.yml
task_manager/: rollbar_middleware.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: __init__.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: __init__.py  labels.json
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_created_at_and_more.py  __init__.py
task_manager/statuses/: __init__.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: __init__.py  statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_created_at_and_more.py  __init__.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: __init__.py  tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_alter_task_options_alter_task_author_and_more.py  __init__.py
task_manager/templates/: base.html  index.html  layout.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  (+2 more)
task_manager/users/: admin.py  forms.py  login.html  tests.py  views.py
users/: forms.py  models.py  urls.py
users/migrations/: 0001_initial.py
(+14 files in other folders)
