[project]
name = "hexlet-code"
version = "0.1.0"
description = "Django task manager for Hexlet project"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.0",
    "gunicorn>=21.0,<22.0",
    "python-dotenv>=1.0,<2.0",
    "dj-database-url>=1.0,<2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"