[project]
name = "hexlet-code"
version = "0.1.0"
description = "Django task manager for Hexlet project"
requires-python = ">=3.10"
dependencies = [
    "django",
    "gunicorn",
    "python-dotenv",
    "dj-database-url",
    "django-bootstrap5",
    "whitenoise",
    "psycopg2-binary",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["task_manager", "users"]

[tool.setuptools.package-dir]
task_manager = "task_manager"
users = "users"

[tool.setuptools.package-data]
task_manager = ["*.py", "**/*.py"]
users = ["*.py", "**/*.py"]
